--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,8 @@ node_modules/
 .cache/
 frontend/react-admin/node_modules/
 frontend/react-admin/.cache/
+
+# Environment variables
+.env
+.env.*
+!.env.example
